fixing some styling so that background covers full page

--- a/style/basic.scss
+++ b/style/basic.scss
@@ -58,10 +58,6 @@ $gameStackBorderWidth: 3px;
 
 body.landscape {
   $puzzleSidePadding: 100px;
-  .ui-page {
-    width: 100%;
-    height: 768px;
-  }
   #game-board {
     .stack {
       margin-top: 75px;
@@ -92,9 +88,6 @@ body.landscape {
 }
 
 body.portrait {
-  height: 1024px;
-  width: 100%;
-  
   #game-board {
     @include centered($boardWidth);
     .stack:first-child {
@@ -121,6 +114,10 @@ body {
   background-color: $backgroundColor;
   margin: 10px;
   font-family: Segoe UI, Arial, Helvetica, sans-serif;
+}
+.ui-page {
+  width: 100% !important;
+  height: 100% !important;
 }
 
 #game-board {
@@ -205,8 +202,7 @@ body {
 }
 
 #pushpop .workarea {
-  position: relative;
-  height: 768px;
+  height: 100%;
   width: auto;
   padding: 0 50px;
   background-color: $backgroundColor;
@@ -222,10 +218,14 @@ body {
 }
 
 .game {
-  position: relative;
   margin-left:auto;
   margin-right:auto;
   z-index: 2;
+}
+
+.game, .help-text {
+  position: relative;
+  top: 47px; // toolbar height
 }
 
 #pushpop .ui-dialog {
@@ -271,6 +271,11 @@ body {
   left:0;
   background-color: #3A3A3A;
   z-index: 4; 
+}
+
+#toolbar {
+  position: absolute;
+  width: 100%;
 }
 
 #help {
